--- a/assets/css/pages/enterprise.scss
+++ b/assets/css/pages/enterprise.scss
@@ -66,7 +66,7 @@
     }
 
     .expertise__ilustration {
-      background: url('../../img/enterprise/ilustration_matterexperts-new.svg') no-repeat center/contain;
+      // background: url('../../img/enterprise/ilustration_matterexperts-new.svg') no-repeat center/contain;
       width: 950px;
       height: 500px;
       max-width: 100%;
@@ -90,7 +90,7 @@
     }
 
     .security__ilustration {
-      background: url('../../img/enterprise/security-new.svg') no-repeat center/contain;
+      // background: url('../../img/enterprise/security-new.svg') no-repeat center/contain;
       width: 850px;
       height: 500px;
       margin: 0 auto;
@@ -115,7 +115,7 @@
     }
 
     .lifecycle__ilustration {
-      background: url('../../img/enterprise/data_safe-new.svg') no-repeat center/contain;
+      // background: url('../../img/enterprise/data_safe-new.svg') no-repeat center/contain;
       width: 950px;
       height: 500px;
       margin: 0 auto;
@@ -140,7 +140,7 @@
     }
 
     .globalscale__ilustration {
-      background: url('../../img/globalscale/final.svg') no-repeat center/contain;
+      // background: url('../../img/globalscale/final.svg') no-repeat center/contain;
       width: 950px;
       height: 500px;
       margin: 0 auto;
